# hostenv

./: .envrc  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  cabal.project  cabal.project.local  composer-install-hook.sh  flake.nix  hie.yaml
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/evidence/: task-10-trigger-output.json  task-14-readme-review.txt  task-15-abort-session.rec  task-15-wizard-session.rec  task-2-config-check.txt  task-5-comin-config.json  task-7-tokens.txt
.sisyphus/plans/: comin-deploy-pipeline-fixes.md  complete-local-provider-migration-demo.md  harmonia-cache-provider-deploy.md  provider-just-work-init.md
docs/: code-review-checklist.md  dendritic-refactor-plan.md  dendritic-structure.md  provider-quickstart.md  provider-refactor-plan.md  provider-service-plan.md
examples/local-provider-migration/: README.md  node-configuration.nix.tmpl  provider-flake.nix.tmpl  run-demo.sh  test-service.sh  trigger-webhook.sh
examples/local-provider-service-project/: README.md  node-configuration.nix.tmpl  provider-flake.nix.tmpl  run-demo.sh  trigger-webhook.sh
flake-modules/: project.nix  provider.nix  root.nix
flake-parts/: devshells.nix  docs.nix  root.nix  templates.nix  tests.nix
modules/: exports.nix  flake.nix  hostenv.nix
modules/core/: cli.nix  environment.nix  environments.nix  full-env.nix  hostenv.nix
modules/entrypoints/: project.nix
modules/env/: drupal.nix  environment.nix  environments.nix  nginx-location-options.nix  nginx.nix  restic.nix  systemd.nix
modules/features/: .phpfpm.nix.swp  cli.nix  drupal.nix  harmonia.nix  hostenv-deploy-agent-build.nix  hostenv-provider-service.nix  mysql.nix  nginx-fastcgi-hostenv.nix  nginx.nix  php-app.nix  phpfpm.nix  postgresql.nix  provider-service-build.nix  restic.nix  systemd.nix
modules/flake/: devshells.nix  docs.nix  systems.nix  templates.nix  tests.nix
modules/flake-modules/: cli-module.nix  cli.nix  exports.nix  make-hostenv.nix
modules/hostenv/: base.nix  environments.nix
modules/lib/: input-resolution.nix  nginx-frontdoor.nix  nginx.nix  public-environments.nix  read-yaml.nix  service-resolution.nix
modules/nixos/: backups-hostenv.nix  backups.nix  cloudflare-hostenv.nix  hostenv-comin-activate.sh  hostenv-deploy-agent.nix  hostenv-service.nix  hostenv-top-level.nix  monitoring-hostenv.nix  monitoring.nix  nginx-frontdoor.nix  nginx-hostenv.nix  nginx-tuning-hostenv.nix  nginx-tuning.nix  plan-bridge.nix  provider-common.nix  provider-deploy.nix  top-level.nix  users-slices.nix
modules/services/hostenv-deploy-agent/: Main.hs  Test.hs  hostenv-deploy-agent.cabal  module.nix
modules/services/hostenv-deploy-agent/Hostenv/Provider/DeployAgent/: Config.hs  Dispatcher.hs  Executor.hs  Logging.hs  Protocol.hs  ProviderApi.hs  State.hs  Supervisor.hs  Systemd.hs  UserSession.hs
modules/services/hostenv-deploy-agent/Hostenv/Provider/DeployAgent/Executor/: Classify.hs  Process.hs
modules/services/hostenv-deploy-agent/Hostenv/Provider/DeployAgent/Transport/: WebSocket.hs
modules/services/hostenv-provider-service/: Main.hs  Test.hs  hostenv-provider-service.cabal  module.nix
modules/services/hostenv-provider-service/Hostenv/Provider/: Command.hs  Config.hs  Crypto.hs  DB.hs  DeployApi.hs  Gitlab.hs  Http.hs  Jobs.hs  Logging.hs  PrevNodeDiscovery.hs  Project.hs  Repo.hs  Server.hs  Service.hs  Util.hs  Webhook.hs
modules/services/hostenv-provider-service/Hostenv/Provider/UI/: Handlers.hs  Helpers.hs  Router.hs  Views.hs
platform/: flake.nix
platform/flake-modules/: cli.nix  environment-registry.nix  exports.nix  hostenv-outputs.nix  hostenv-provider-service.nix  make-hostenv.nix  project-outputs.nix
platform/hooks/: composer-install-restore-installer-paths.sh
platform/hostenv-modules/: cli.nix  environment.nix  environments.nix  full-env.nix  hostenv.nix  project-tools.nix  public-environments.nix
platform/nixos-modules/: backups-hostenv.nix  monitoring-hostenv.nix  nginx-hostenv.nix  top-level.nix  users-slices.nix
platform/services/: drupal.nix  hostenv-provider-service.nix  nginx-vhost-options.nix  nginx.nix  phpfpm.nix  postgresql.nix  restic.nix
platform/services/hostenv-provider-service/: Main.hs  haskell-deps.nix  hostenv-provider-service.cabal
platform/services/hostenv-provider-service/Hostenv/Provider/: Service.hs
platform/services/hostenv-provider-service/Hostenv/Provider/UI/: Handlers.hs  Helpers.hs  Views.hs
provider/: TestDeployVerification.hs  TestDnsBackoff.hs  TestDnsGateFilter.hs  TestPrevNodeDiscovery.hs  TestSigningTargets.hs  cli.hs  common.nix  deploy-outputs.nix  exports.nix  flake-module.nix  hostenv-provider-cli.cabal  nixos-system.nix  plan.nix  read-yaml.nix
provider/Hostenv/Provider/: DeployGuidance.hs  DeployPreflight.hs  DeployVerification.hs  DnsBackoff.hs  DnsGateFilter.hs  NixTrustBootstrap.hs  PrevNodeDiscovery.hs  SigningTarget.hs
secrets/: secrets.yaml.example
src/flake-modules/: root.nix
src/modules/: csp.nix  drupal.nix  environments.nix  flake.nix  hostenv-cli.nix  hostenv-environments.nix  hostenv-service.nix  hostenv.nix  mysql.nix  nginx-fastcgi-hostenv.nix  nginx.nix  php-app.nix  phpfpm.nix  restic.nix  systemd.nix  top-level.nix  vhost.nix
src/provider/: cli.hs  common.nix  flake-module.nix  nixos-system.nix  plan.nix
template/.hostenv/: .envrc  flake.nix  hostenv.nix
template/provider/: .envrc  .gitignore  README.md  flake.nix  flake.template.nix
tests/: README.md  default.nix  dendritic.nix  environments-sample.nix  environments.nix  hostenv-assertions.nix  hostname.nix  lib.nix  plan-bridge.nix  provider-full.nix  provider-plan.nix  restic.nix  socket-contract.nix  users-slices.nix
tests/drupal/: hostenv.nix  tests.nix
tests/drupal7/: hostenv.nix  tests.nix
tests/golden/: plan.json
tests/integration/: cli-list.nix  cli-secrets-sync.nix  default.nix  devshells.nix  hostenv-deploy-agent-multivm.nix  hostenv-outputs.nix  hostname.nix  local-provider-migration.nix  local-provider-service-project.nix  plan-bridge.nix  provider-auto-init.nix  provider-deploy-multivm.nix  (+11 more)
(+103 files in other folders)
