cabal-version: 2.4
name: hostenv-provider-cli
version: 0.1.0.0
synopsis: Hostenv provider CLI (plan, dns-gate)
license: LicenseRef-OtherLicense
build-type: Simple

executable hostenv-provider
  main-is: cli.hs
  hs-source-dirs: .
  other-modules:
    Hostenv.Provider.DnsBackoff
    Hostenv.Provider.DeployGuidance
    Hostenv.Provider.DnsGateFilter
    Hostenv.Provider.DeployVerification
    Hostenv.Provider.DeployPreflight
    Hostenv.Provider.PrevNodeDiscovery
    Hostenv.Provider.SigningTarget
  build-depends:
    base >=4.14 && <5,
    Cabal,
    containers,
    aeson,
    bytestring,
    directory,
    filepath,
    optparse-applicative,
    process,
    text,
    text-conversions,
    turtle,
    scientific
  default-language:
    GHC2021
  default-extensions:
    BlockArguments
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
